--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <h1>ah</h1>
     <h1>Adiós titi</h1>
+    <img src="img/foto1.jfif" alt="">
+    <img src="img/foto2.jfif" alt="">
+    <img src="img/foto3.jfif" alt="">
+
     
 </body>
 </html>
