--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <img src="img/foto1.jfif" alt="">
     <img src="img/foto2.jfif" alt="">
     <img src="img/foto3.jfif" alt="">
-
+    <img src="img/foto4.jfif" alt="">
+    <img src="img/foto5.jfif" alt="">
+    <img src="img/foto6.jfif" alt="">
     
+
 </body>
 </html>
