Cuarta versión con 7 imágenes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <img src="img/foto4.jfif" alt="">
     <img src="img/foto5.jfif" alt="">
     <img src="img/foto6.jfif" alt="">
+    <img src="img/paisaje-1.webp" alt="">
+    <img src="img/paisajes-naturales-1024x683.jpg" alt="">
     <h2>Creado en la rama prueba</h2>
     
     
