--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>ah</h1>
-    <h1>Adiós titi</h1>
+    <h1>Adiós</h1>
     <img src="img/foto1.jfif" alt="">
     <img src="img/foto2.jfif" alt="">
     <img src="img/foto3.jfif" alt="">
@@ -19,7 +19,9 @@
     <img src="img/paisaje-1.webp" alt="">
     <img src="img/paisajes-naturales-1024x683.jpg" alt="">
     <h2>Creado en la rama prueba</h2>
-    
+    <p>
+        <a href="segundo.html">Ir a la otra página</a>
+    </p>
     
 
 </body>
